feat: add missing operation.
